--- a/database.bib
+++ b/database.bib
@@ -26,4 +26,8 @@
     doi = {10.1109/18.910579},
     month = {February}
 }
-
+@Article{QiGo07,
+    Title = {Low-Complexity Encoding of LDPC Codes: A New Algorithm and its Performance},
+    Author = {Hanghang Qi and Norbert Goertz},
+    yeat = {2007}
+}
