--- a/commands.tex
+++ b/commands.tex
@@ -57,7 +57,7 @@
 %\usepackage[europeanresistors]{circuitikz}
 \usepackage{pgfplots}
 \usepackage{pgfplotstable}
-\usetikzlibrary{shapes, arrows.meta, positioning, decorations.pathmorphing, math, calc, fit, chains}
+\usetikzlibrary{shapes, arrows.meta, positioning, decorations.pathmorphing, math, calc, fit, chains, matrix, decorations.pathreplacing}
 \sisetup{per-mode=symbol} 
 
 \tikzset{
