--- a/commands.tex
+++ b/commands.tex
@@ -44,6 +44,7 @@
 \usepackage{geometry}
 \usepackage{etoolbox}
 \usepackage{filecontents}
+\usepackage{booktabs}
 \usepackage{subcaption}
 \usepackage[framed,numbered,autolinebreaks,useliterate]{mcode}
 \usepackage{newunicodechar}
