--- a/database.bib
+++ b/database.bib
@@ -31,3 +31,16 @@
     Author = {Hanghang Qi and Norbert Goertz},
     yeat = {2007}
 }
+@Article{Fo04,
+    Author = {M. P. C. Fossorier},
+    Jounal = {IEEE Transactions on Information Theory},
+    Title = {Quasicyclic low-density parity-check codes from circulant permutation matrices},
+    Year = {2004},
+    volume = {50},
+    number = {8},
+    pages = {1788-1793},
+    doi = {10.1109/TIT.2004.831841},
+    Month = {August}
+}
+
+}
