complete channel basics

--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -26,7 +26,7 @@
 		{\Large \textbf{Design and Implementation of an LDPC-based FEC encoder/decoder suitable for Storage devices}}
 		
 		\vspace{1cm}
-		Schriftliche Prüfungsarbeit für die Bachelorprüfung der Fakultät für Elektrotechnik und Informationstechnik an der Ruhr-Universität Bochum (Bachelor-Prüfungsordnung für den Studiengang „Elektrotechnik und Informationstechnik“ an der Ruhr-Universität Bochum vom 12. August 2013)\\
+		Schriftliche Prüfungsarbeit für die Masterprüfung der Fakultät für Elektrotechnik und Informationstechnik an der Ruhr-Universität Bochum (Master-Prüfungsordnung für den Studiengang „Elektrotechnik und Informationstechnik“ an der Ruhr-Universität Bochum vom 12. August 2013)\\
 		\vspace{1cm}
 		{
 			vorgelegt von: \\
