--- a/database.bib
+++ b/database.bib
@@ -42,5 +42,10 @@
     doi = {10.1109/TIT.2004.831841},
     Month = {August}
 }
-
+@Article{El55,
+    Author = {P. Elias},
+    Jounal = {Information Theory, Third London Symposium},
+    pager = {61 = 76},
+    Year = {1955},
+    month = {September}
 }
