--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,7 @@
 \title{Design and Implementation of an LDPC-based FEC encoder/decoder suitable for Storage devices}
 \author{Henry Bathke}
 
-
+\graphicspath{{image/}}
 \begin{document}
 	\include{TitlePage}
 	
@@ -24,7 +24,9 @@
 	\include{motivation}
 	
 	\include{basics_ldpc}
+	\include{basics_channel}
 	\include{basics_FPGA}
+
 	
 	\include{approach}
 	
