--- a/database.bib
+++ b/database.bib
@@ -49,3 +49,23 @@
     Year = {1955},
     month = {September}
 }
+@Article{ZaTu16,
+    Author = {S. A. A. Zaidi and A. Tuoheti and M. Martina and G. Masera},
+    journal = {IEEE Design Test}, 
+    title = {FPGA Accelerator of Algebraic Quasi Cyclic LDPC Codes for lt;sc gt;nand lt;/sc gt; Flash Memories},
+    year = {2016},
+    volume = {33},
+    number = {6},
+    pages = {77-84},
+    doi = {10.1109/MDAT.2015.2497322},
+    month = {December}
+}
+@Inproceedings{LiZh17,
+    author = {Y. Liu and C. Zhang and P. Song and H. Jiang},
+    booktitle = {2017 IEEE 60th International Midwest Symposium on Circuits and Systems (MWSCAS)},
+    title = {A high-performance FPGA-based LDPC decoder for solid-state drives},
+    year = {2017},
+    pages = {1232-1235},
+    doi = {10.1109/MWSCAS.2017.8053152},
+    month = {August}
+}
