--- a/database.bib
+++ b/database.bib
@@ -69,3 +69,12 @@
     doi = {10.1109/MWSCAS.2017.8053152},
     month = {August}
 }
+@Inproceedings{EmEl14,
+    author = {A. A. Emran and M. Elsabrouty},
+    booktitle = {2014 IEEE 11th Consumer Communications and Networking Conference (CCNC)},
+    title = {Simplified variable-scaled min sum LDPC decoder for irregular LDPC codes},
+    year = {2014},
+    pages = {518-523},
+    doi = {10.1109/CCNC.2014.6940497},
+    month = {January}
+}
