--- a/commands.tex
+++ b/commands.tex
@@ -128,6 +128,8 @@
 }	
 
 %\renewcommand*\sectionformat{}
+\DeclareMathOperator{\sign}{sign}
+\DeclareMathOperator*{\argmin}{arg\,min}
 
 
 \usepackage[headsepline, headtopline, plainheadsepline, plainheadtopline, footsepline, plainfootsepline]{scrlayer-scrpage}
