more approach and more basics LDPC

--- a/basics_ldpc.tex
+++ b/basics_ldpc.tex
@@ -262,7 +262,12 @@ the resulting matrix is
 \todo{do i want do describe the algorithm to get into alt form? yes!}
 
 \subsection{Decoding}
-Decoding LDPC codes is a nontrivial problem, in fact maximum likelihood decoding is computationally infeasible. Therefore other decoding methods were developed. There are different decoding algorithms which differ in performance and complexity.
+Decoding LDPC codes is a nontrivial problem, in fact maximum likelihood decoding is computationally infeasible. Therefore other decoding methods were developed. There are different decoding algorithms which differ in performance and complexity. I will start with a simple algorithm to introduce the required concepts and then go on to more performant ones.
+
+\subsubsection{Hard Descision Decoding}
+This algorithm works on binary input data and all the messages are also binary.
+
+
 
 \todo{decode dat }
 
